updated gitignore and added mvn wrapper

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,32 @@
-# Compiled class file
-*.class
+HELP.md
+/target/
+!.mvn/wrapper/maven-wrapper.jar
 
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/
 
 # Package Files #
 *.jar
@@ -27,5 +45,4 @@ target/
 .classpath
 .project
 
-.idea/
-graphql-workshop.iml
+
