--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.RELEASE</version>
+		<version>2.1.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -25,22 +25,21 @@
 	</properties>
 
 	<dependencies>
-	     <!--  Java 9 dep -->
-	     <dependency>
-		    <groupId>javax.xml.bind</groupId>
-		    <artifactId>jaxb-api</artifactId>
-		    <version>2.3.0</version>
-	    </dependency>
-	     <!--  Java 9 dep -->
+		<!--  Java 9 dep -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
 		</dependency>
+		<!--  Java 9 dep -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -66,19 +65,38 @@
 		<dependency>
 			<groupId>com.graphql-java</groupId>
 			<artifactId>graphql-java</artifactId>
-			<version>8.0</version>
+			<version>11.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.graphql-java</groupId>
 			<artifactId>graphql-java-tools</artifactId>
-			<version>5.0.0</version>
+			<version>5.2.4</version>
 		</dependency>
 		<dependency>
+		<groupId>com.graphql-java</groupId>
+		<artifactId>graphql-java-servlet</artifactId>
+		<version>6.1.3</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.graphql-java</groupId>-->
+<!--			<artifactId>graphql-spring-boot-starter</artifactId>-->
+<!--			<version>5.0.2</version>-->
+<!--		</dependency>-->
+
+		<!-- Dev Only -->
+		<dependency>
 			<groupId>com.graphql-java</groupId>
-			<artifactId>graphql-java-servlet</artifactId>
-			<version>5.0.0</version>
+			<artifactId>graphiql-spring-boot-starter</artifactId>
+			<version>5.0.2</version>
 		</dependency>
 		<!-- GraphQL end -->
+
+		<dependency>
+			<groupId>io.reactivex.rxjava2</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
